# quantum-computing

./: .gitignore  README.md  environment.yaml  main.py  pyproject.toml
quantum_computing/: __init__.py
quantum_computing/p1/: __main__.py
quantum_computing/p1/hamiltonian/: hamiltonian.py
quantum_computing/p1/notebooks/: part_a.ipynb  part_b.ipynb  part_c.ipynb  part_d.ipynb  part_e.ipynb  part_f.ipynb  part_g.ipynb
quantum_computing/p1/quantum/: circuits.py  gates.py  measurements.py  states.py  utils.py
quantum_computing/p1/vge/: lipkin_vqe.py  vge.py
quantum_computing/p2/: README.md  __init__.py  __main__.py  notebook.ipynb  quantum_classifier_full_training_history.csv  testbook.ipynb
quantum_computing/p2/qml/: __init__.py  ansatzes.py  encoders.py  initializers.py  optimizers.py  quantum_model.py
quantum_computing/p2/utils/: data_prepperation.py  visualization.py
quantum_computing/utils/: __init__.py  logger.py
